Bug 121039 - Ctrl-clicking a hyperlink in shape or text box does not work while editing the said object
Summary: Ctrl-clicking a hyperlink in shape or text box does not work while editing th...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:6.4.0
Keywords:
: 121038 121948 131853 (view as bug list)
Depends on:
Blocks: Hyperlink-Calc
  Show dependency treegraph
 
Reported: 2018-10-29 17:15 UTC by Buovjaga
Modified: 2023-11-01 17:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2018-10-29 17:15:46 UTC
1. Open attachment 144647 [details]
2a. Go to text edit mode in a shape or text box, Ctrl-click hyperlink in A4
2b. Edit an empty cell, Ctrl-click link in shape & text box
2c. Edit a shape or text box with link, Ctrl-click the link
2d. Edit a shape or text box with no link, Ctrl-click a link in some other shape or text box

One case found by Harald was a regression from 4.3, bug 121038

Arch Linux 64-bit
Version: 6.2.0.0.alpha1+
Build ID: bfa6aeb379e5dfcf6f1f97b3365ab551995ab3d5
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); Calc: threaded
Built on 28 October 2018

Arch Linux 64-bit
LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 1 Samuel Mehrbrodt 2019-07-16 16:12:38 UTC
Hm this is rather a UX question.
Personally I find the current behavior expected. When you edit a textbox, clicking outside that textbox ends editing.

I wouldn't expect any other actions to be executed when clicking outside of a textbox I'm currently editing.
Comment 2 Samuel Mehrbrodt 2019-07-16 16:14:03 UTC
*** Bug 121038 has been marked as a duplicate of this bug. ***
Comment 3 Heiko Tietze 2019-07-17 04:09:12 UTC
(In reply to Samuel Mehrbrodt (CIB) from comment #1)
> Personally I find the current behavior expected. When you edit a textbox,
> clicking outside that textbox ends editing.

Agree. Is this the only question here? I mean there is none asked. 

I cannot open the link in Shape rectangle A with 6.1.6, context menu has the hyperlink entry but nothing happens. A4 works of course.
Comment 4 Buovjaga 2019-07-17 12:42:50 UTC
(In reply to Samuel Mehrbrodt (CIB) from comment #1)
> Hm this is rather a UX question.
> Personally I find the current behavior expected. When you edit a textbox,
> clicking outside that textbox ends editing.
> 
> I wouldn't expect any other actions to be executed when clicking outside of
> a textbox I'm currently editing.

Would you say the same is true for the case when you are editing a cell, target link being in another cell or shape/box? You closed bug 121038, which was about a change in behaviour.

Personally I don't have strong opinions on this.
Comment 5 Commit Notification 2019-07-17 15:07:08 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/a2601800845c6500f833684f5e09bf324ac8af09%5E%21

tdf#121039 "Open hyperlink" from context menu does not work

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Heiko Tietze 2019-07-18 05:58:56 UTC
Is it resolved, Samuel?
Comment 7 Samuel Mehrbrodt 2019-08-07 06:44:13 UTC
(In reply to Heiko Tietze from comment #6)
> Is it resolved, Samuel?

No, just your issue from comment 3 was fixed with my commit.

(In reply to Buovjaga from comment #4)
> (In reply to Samuel Mehrbrodt (CIB) from comment #1)
> > Hm this is rather a UX question.
> > Personally I find the current behavior expected. When you edit a textbox,
> > clicking outside that textbox ends editing.
> > 
> > I wouldn't expect any other actions to be executed when clicking outside of
> > a textbox I'm currently editing.
> 
> Would you say the same is true for the case when you are editing a cell,
> target link being in another cell or shape/box? You closed bug 121038, which
> was about a change in behaviour.
> 
> Personally I don't have strong opinions on this.

I am also not sure what is the best solution here. Personally I would probably make sure any link *inside* the currently edited cell/graphic is clickable and clicking anything outside of the current cell/graphic will just end the edit mode.

Excel does this differently, it will not only end edit mode, but also open the hyperlink even while you are editing.
Comment 8 Commit Notification 2019-08-19 19:13:16 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/91b431f88e7abaa3a088b8caf1bdd7e5fe0bf120%5E%21

tdf#121039 Open URL also when in edit mode

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Samuel Mehrbrodt 2019-08-19 19:18:00 UTC
So with above patch the behavior is now that if you edit a textbox/shape you can still open a link in the currently edited textbox.
This should be the same in Writer, Calc, Draw, Impress.

I would mark this bug as resolved then. Please open separate bugs for additional problems.
Comment 10 Samuel Mehrbrodt 2019-08-19 19:22:01 UTC
*** Bug 121948 has been marked as a duplicate of this bug. ***
Comment 11 Justin L 2023-11-01 17:21:42 UTC
*** Bug 131853 has been marked as a duplicate of this bug. ***