tdf#121039 "Open hyperlink" from context menu does not work

Change-Id: I802a4a64d48befa9c41b7095416f165082a155f2