sc/inc/global.hxx
@@ -565,8 +565,11 @@ public:
     SC_DLLPUBLIC static ScUnoAddInCollection* GetAddInCollection();
     SC_DLLPUBLIC static ScUserList*         GetUserList();
     static void                 SetUserList( const ScUserList* pNewList );
-    /// Open the specified URL.
-    static void                 OpenURL(const OUString& rURL, const OUString& rTarget);
+    /**
+     * Open the specified URL.
+     * @param bIgnoreSettings - If true, ignore security settings (Ctrl-Click) and just open the URL.
+     */
+    static void OpenURL(const OUString& rURL, const OUString& rTarget, bool bIgnoreSettings = false);
     /// Whether the URL can be opened according to current security options (Click/Ctrl-Click)
     static bool                 ShouldOpenURL();
     SC_DLLPUBLIC static OUString            GetAbsDocName( const OUString& rFileName,
